compiler/test-data/parser/errors/control/repeat_missing_on.frel
module test

backend ListBackend {
    items : List<String> = []
}

blueprint Bad {
    with ListBackend

    repeat items { item ->
        text { item }
    }
}
